[gd_scene load_steps=3 format=3 uid="uid://ba5e6bp3swt3m"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_8lk3j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8oa7y"]
content_margin_top = 120.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8lk3j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.317647, 0.560784, 0.682353, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 184.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxEmpty_8oa7y")
text = "The Shutter Project"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Continue" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../NewGame")
focus_previous = NodePath("../Quit")
text = "Continue
"
flat = true

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="NewGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Options")
focus_previous = NodePath("../Continue")
text = "New Game
"
flat = true

[node name="Control2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="Options" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Options
"
flat = true

[node name="Control3" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="Credits" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Options")
text = "Credits"
flat = true

[node name="Control4" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Continue")
focus_previous = NodePath("../Credits")
text = "Quit"
flat = true

[connection signal="pressed" from="HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
